# ai_city_challenge

./: .gitignore  .hafniaignore  CLAUDE.md  Dockerfile  README.md  commands.txt  requirements.txt  trainer_instruction.txt
configs/: rfdetr_large_eccv.yaml
docs/: README.md  cross_camera_diagnosis.md  findings.md  gpu_memory.md  metrics-and-checkpoints.md  model_metrics.md
rf-detr/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml
rf-detr/docs/: changelog.md  cookbooks.md  index.md
rf-detr/docs/cookbooks/: NOTES.md  cards.yaml  release-demo_1-5.ipynb  release-demo_1-6.ipynb
rf-detr/docs/getting-started/: install.md  migration.md
rf-detr/docs/hooks/: cookbooks_cards.py  package_version.py
rf-detr/docs/javascripts/: cookbooks-card.js
rf-detr/docs/learn/: benchmarks.md  deploy.md  export.md  pretrained.md
rf-detr/docs/learn/run/: detection.md  segmentation.md
rf-detr/docs/learn/train/: advanced.md  augmentations.md  customization.md  dataset-formats.md  index.md  loggers.md  training-parameters.md
rf-detr/docs/reference/: 2xlarge.md  large.md  medium.md  nano.md  rfdetr.md  seg_2xlarge.md  seg_large.md  seg_medium.md  seg_nano.md  seg_small.md  seg_xlarge.md  segmentation_train_config.md  small.md  train_config.md  training.md  xlarge.md
rf-detr/docs/resources/: index.md
rf-detr/docs/root-static/: llms-full.txt  llms.txt  robots.txt
rf-detr/docs/stylesheets/: cookbooks_card.css
rf-detr/docs/theme/: main.html  notebooks.html
rf-detr/docs/theme/partials/: header.html
rf-detr/src/rfdetr/: __init__.py  __main__.py  _namespace.py  config.py  detr.py  inference.py  variants.py
rf-detr/src/rfdetr/assets/: coco_classes.py  model_weights.py
rf-detr/src/rfdetr/cli/: __init__.py
rf-detr/src/rfdetr/datasets/: __init__.py  _develop.py  aug_config.py  coco.py  kornia_transforms.py  o365.py  save_grids.py  synthetic.py  transforms.py  xcity_augs.py  yolo.py
rf-detr/src/rfdetr/deploy/: __init__.py
rf-detr/src/rfdetr/evaluation/: __init__.py  coco_eval.py  f1_sweep.py  matching.py
rf-detr/src/rfdetr/export/: __init__.py  _tensorrt.py  benchmark.py  main.py  protocols.py
rf-detr/src/rfdetr/export/_onnx/: __init__.py  exporter.py  inference.py  symbolic.py
rf-detr/src/rfdetr/export/_tflite/: __init__.py  converter.py  inference.py
rf-detr/src/rfdetr/models/: _defaults.py  _types.py  criterion.py  lwdetr.py  matcher.py  math.py  position_encoding.py  postprocess.py  segmentation_head.py  transformer.py  weights.py
rf-detr/src/rfdetr/models/backbone/: __init__.py  backbone.py  dinov2_with_windowed_attn.py  dinov3.py  projector.py
rf-detr/src/rfdetr/models/heads/: __init__.py  detection.py  segmentation.py
rf-detr/src/rfdetr/models/ops/functions/: __init__.py  ms_deform_attn_func.py
rf-detr/src/rfdetr/models/ops/modules/: ms_deform_attn.py
rf-detr/src/rfdetr/platform/: __init__.py  downloads.py  models.py
rf-detr/src/rfdetr/training/: __init__.py  auto_batch.py  checkpoint.py  cli.py  drop_schedule.py  model_ema.py  module_data.py  module_model.py  param_groups.py  trainer.py
rf-detr/src/rfdetr/training/callbacks/: __init__.py  best_model.py  coco_eval.py  drop_schedule.py  ema.py
rf-detr/src/rfdetr/util/: box_ops.py  coco_classes.py  drop_scheduler.py  files.py  get_param_dicts.py  logger.py  misc.py  package.py  utils.py  visualize.py
rf-detr/src/rfdetr/utilities/: __init__.py  box_ops.py  decorators.py  distributed.py  files.py  logger.py  package.py  reproducibility.py  state_dict.py  tensors.py
rf-detr/src/rfdetr/visualize/: __init__.py  data.py  training.py
rf-detr/tests/: conftest.py  helpers.py  test_namespace.py  try_instantiate_all_models.py
rf-detr/tests/assets/: test_downloads.py  test_model_weights.py
rf-detr/tests/benchmarks/: conftest.py  test_inference_coco.py  test_training_synthetic.py
rf-detr/tests/cli/: test_configs.py  test_legacy_cli.py  test_smoke.py
rf-detr/tests/datasets/: test_augmentations.py  test_coco.py  test_coco_resize_config.py  test_coco_rle.py  test_copy_paste.py  test_fourier_amplitude_mix.py  test_kornia_transforms.py  test_repeat_factor_sampling.py  test_save_grids.py  test_synthetic.py  test_xcity_augs.py  test_yolo.py
rf-detr/tests/export/: test_onnx_notes.py  test_tensorrt_export.py  test_tflite_export.py  test_tflite_inference.py
rf-detr/tests/models/: test_builder_characterization.py  test_builders.py  test_config.py  test_detection_head.py  test_export.py  test_from_checkpoint.py  test_inference.py  test_matcher.py  test_model.py  test_optimize_for_inference.py  test_predict.py  test_segmentation_head.py  test_train_resume.py  test_transformer.py  test_validate_shape_dims.py  test_weights.py
rf-detr/tests/models/backbone/: test_backbone_export.py  test_windowed_dino.py
rf-detr/tests/training/: conftest.py  helpers.py  test_args.py  test_auto_batch.py  test_best_model_callback.py  test_build_trainer.py  test_cli.py  test_coco_eval_callback.py  test_detr_shim.py  test_drop_path_callback.py  test_ema_callback.py  test_load_pretrain_weights.py  test_metrics_csv.py  test_module_data.py  test_module_model.py  test_trainer.py  test_trainer_smoke.py
rf-detr/tests/utilities/: test_distributed.py  test_file_validation.py  test_package.py  test_state_dict.py  test_tensors.py
scripts/: _docker_convnext.sh  _docker_vfnet.sh  _mem_probe.py  _poll_experiment.py  analyze_v28_failures.py  check_cdfkd.py  check_dinov3_warmstart.py  collect_metrics.py  compare_yolo.py  convnext_infer.py  diagnose_checkpoint.py  dinov3_infer.py  diversity_audit.py  download_weights.py  ensemble_eval.py  predict_v28_test.py  preview_aug.py  probe_backbones.py  pseudo_labels.py  real_fisheye_check.py  sahi_tune.py  slim_pseudo_predictions.py  test_sahi.py  test_sahi_wbf.py  train.py  train_yolo.py  tta_ensemble.py  v16_infer.py  vfnet_infer.py  visualize_failures.py  visualize_heldout.py  viz_fourier_amplitude_mix.py  yolo_infer.py
tools/: hafnia_leaderboard.py
trainer-convnext/: requirements.txt
trainer-vfnet/: .hafniaignore  Dockerfile  README.md
(+11 files in other folders)
